-add location section -fix visibility of the shadow

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -8,21 +8,46 @@
 @media (max-width: 768px) {
 
     .image-container {
-        width: 100% !important;
+        width: 100%;
         height: 63px;
         display: flex;
         justify-content: center;
         align-items: center;
         padding: 14px 0px 0px 0px;
-        margin: 0px;
-        box-shadow:  0px 2px 4px rgba(0, 0, 0, 0.15);
+        margin: 0px 0px 3px 0px;
+        box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.25);
         box-sizing: border-box;
+        z-index: 2;
+        
 
         img {
-            width: 35%;
+            width: 100%;
             height: 30px;
             box-sizing: border-box;
         }
     }
- 
+
+    .location{
+        height: 15px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 15px;
+        background: rgba(234, 234, 234, 1);
+        z-index: -1;
+    
+
+            .paris {
+            text-decoration: none;
+            color: #353535;
+            font-size: 14px;
+            font-weight: 500;
+
+                .fa-location-dot {
+                    font-size: x-small;
+                    margin-right: 10px;
+                }
+         }
+    }
+   
 }
